// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown should match snapshots: commented-sample 1`] = `
[
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "function somethingDangerous() {}",
    "descriptor": "./commented-sample.md:6",
    "id": "commented-sample-6",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 5,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "commented-sample.md",
    "targetFilename": null,
    "tsOptions": {},
  },
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "let val = null;  // Type is any
try {
  somethingDangerous();
  val = 12;
  val  // Type is number
} catch (e) {
  console.warn('alas!');
}
val  // Type is number | null",
    "descriptor": "./commented-sample.md:11",
    "id": "commented-sample-11",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 10,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "commented-sample-6",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "commented-sample.md",
    "targetFilename": null,
    "tsOptions": {},
  },
]
`;

exports[`markdown should match snapshots: doc1 1`] = `
[
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "function greet(who: string) {
  console.log('Hello', who);
}",
    "descriptor": "./doc1.md:3",
    "id": "greet-ts",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 4,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "doc1.md",
    "targetFilename": null,
    "tsOptions": {},
  },
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "console.log("end of file");
",
    "descriptor": "./doc1.md:20",
    "id": "doc1-20",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 19,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "doc1.md",
    "targetFilename": null,
    "tsOptions": {},
  },
]
`;

exports[`markdown should match snapshots: multilinetype 1`] = `
[
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "const o = {x: 1, y: 2};
// type is {
//   x: number;
//   y: number;
// }",
    "descriptor": "./multilinetype.md:4",
    "id": "multilinetype-4",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 3,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "multilinetype.md",
    "targetFilename": null,
    "tsOptions": {},
  },
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "function addWithExtras(a: number, b: number) {
  const c = a + b;  // type is number
  // ...
  return c;
}",
    "descriptor": "./multilinetype.md:14",
    "id": "multilinetype-14",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 13,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "multilinetype.md",
    "targetFilename": null,
    "tsOptions": {},
  },
]
`;

exports[`markdown should match snapshots: noid 1`] = `
[
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "console.log('Hello', 'TS');",
    "descriptor": "./noid.md:8",
    "id": "noid-8",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 7,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "noid.md",
    "targetFilename": null,
    "tsOptions": {},
  },
]
`;

exports[`markdown should match snapshots: prepend 1`] = `
[
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "descriptor": "./prepend.md:2",
    "id": "prefix",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 3,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend.md",
    "targetFilename": null,
    "tsOptions": {},
  },
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "descriptor": "./prepend.md:7",
    "id": "combined",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 8,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "prefix",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend.md",
    "targetFilename": null,
    "tsOptions": {},
  },
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "descriptor": "./prepend.md:14",
    "id": "final",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 15,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend.md",
    "targetFilename": null,
    "tsOptions": {},
  },
]
`;

exports[`markdown should match snapshots: prepend-multiple 1`] = `
[
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "descriptor": "./prepend-multiple.md:3",
    "id": "prepend-multiple-3",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 2,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend-multiple.md",
    "targetFilename": null,
    "tsOptions": {},
  },
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "type ABC = AB | 'c';",
    "descriptor": "./prepend-multiple.md:8",
    "id": "prepend-multiple-8",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 7,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "prepend-multiple-3",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend-multiple.md",
    "targetFilename": null,
    "tsOptions": {},
  },
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "const c: ABC = 'c';",
    "descriptor": "./prepend-multiple.md:12",
    "id": "prepend-multiple-12",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 11,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "prepend-multiple-3",
      },
      {
        "id": "prepend-multiple-8",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend-multiple.md",
    "targetFilename": null,
    "tsOptions": {},
  },
]
`;

exports[`markdown should match snapshots: skip 1`] = `
[
  {
    "auxiliaryFiles": [],
    "checkJS": false,
    "content": "keyof A&B = (keyof A) | (keyof B)",
    "descriptor": "./skip.md:3",
    "id": "skip-3",
    "inCommentBlock": false,
    "isTSX": false,
    "language": "ts",
    "lineNumber": 2,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": true,
    "sourceFile": "skip.md",
    "targetFilename": null,
    "tsOptions": {},
  },
]
`;
